@@ -1,6 +1,7 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
  
+- Added option to suspend live TV when the server starts
 - Set device occupied when streamdev switches away LiveTV on the server, to
   reduce the risk that the VDR main loop immediately switches back, resulting
   in a black screen on the client (reported by hummel99)
